Enable mocking the http client for testing

--- a/src/SiftScienceNet/SiftScienceNet.csproj
+++ b/src/SiftScienceNet/SiftScienceNet.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Events\Chargeback.cs" />
     <Compile Include="Events\Content.cs" />
     <Compile Include="Events\UpdateOrderStatus.cs" />
+    <Compile Include="IHttpClient.cs" />
     <Compile Include="SiftResponse.cs" />
     <Compile Include="Events\CreateContent.cs" />
     <Compile Include="Events\Item.cs" />
